[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncpg>=0.31.0",
    "fastapi[standard]>=0.139.2",
]

[dependency-groups]
dev = [
    "pre-commit>=4.6.1",
    "pytest>=9.1.1",
    "ruff>=0.15.22",
]
