[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.5",
    "asyncpg>=0.31.0",
    "fastapi[standard]>=0.139.2",
    "passlib[argon2]>=1.7.4",
    "pyjwt>=2.13.0",
    "redis>=8.0.1",
    "sqlmodel>=0.0.39",
]

[dependency-groups]
dev = [
    "pre-commit>=4.6.1",
    "pytest>=9.1.1",
    "ruff>=0.15.22",
]
